# iso20022-ecore

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: API-Usage.md  Architecture.md  Exports-and-Formats.md  FAQ.md  Filter-Language.md  Graph-Exports.md  Home.md  Instance-Grouping.md  JSON-Schemas.md  Path-Exports.md  Pruning-and-Dry-Run.md  Query-Language-Deep-Dive.md  Quick-Start.md  Troubleshooting.md  XSD-Mapping-Rules.md  _Sidebar.md  emf-read.md  index.md  xsd-enrich.md
emf_reader/: __init__.py  cli.py  export.py  loader.py  query.py  xsd_enrich.py  xsd_enrich_cli.py
tests/: test_cli.py  test_metamodel.py
